新增 AI 地名坐标搜索工具